; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/wps/extr_wps_attr_process.c_wps_process_cred_ap_channel.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/wps/extr_wps_attr_process.c_wps_process_cred_ap_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wps_credential = type { i32 }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"WPS: AP Channel: %u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wps_credential*, i32*)* @wps_process_cred_ap_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wps_process_cred_ap_channel(%struct.wps_credential* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.wps_credential*, align 8
  %5 = alloca i32*, align 8
  store %struct.wps_credential* %0, %struct.wps_credential** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

9:                                                ; preds = %2
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @WPA_GET_BE16(i32* %10)
  %12 = load %struct.wps_credential*, %struct.wps_credential** %4, align 8
  %13 = getelementptr inbounds %struct.wps_credential, %struct.wps_credential* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* @MSG_DEBUG, align 4
  %15 = load %struct.wps_credential*, %struct.wps_credential** %4, align 8
  %16 = getelementptr inbounds %struct.wps_credential, %struct.wps_credential* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @wpa_printf(i32 %14, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %17)
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %9, %8
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @WPA_GET_BE16(i32*) #1

declare dso_local i32 @wpa_printf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
